--- a/css/our.css
+++ b/css/our.css
@@ -96,3 +96,20 @@
     top: 2%;
     left: 2%;
 }
+
+/**
+ * Notify
+ */
+
+.CyclicNotifyBoard {
+    position: absolute;
+    z-index: 3;
+    bottom: 20px;
+    right: 20px;
+    background: #ffffff;
+    color: #000;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    width: 3%;
+    padding: 10px 0 10px 0;
+    box-shadow: 0 0 15px rgba(0,0,0,0.5);
+}
