--- a/js/game/game_templates/room.pug
+++ b/js/game/game_templates/room.pug
@@ -1,3 +1,3 @@
 div(class="cyclic-menu-room")
-    span #{roomText}
+    div(class="cyclic-menu-room-title") #{roomText}
     div(class="cyclic-menu-room-count" id="cyclic-menu-room-count-" + count) #{countText}
