--- a/js/game/game_templates/roombase.pug
+++ b/js/game/game_templates/roombase.pug
@@ -1,4 +1,5 @@
 div(class="div-center")
+    h1 Choose room to play in!
     div(id="cyclic-rooms")
         div(id="cyclic-rooms-container" style="")
         div(class="cyclic-rooms-buttons")
